--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,13 @@ buildscript {
         maven { url = "http://files.minecraftforge.net/maven" }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
     }
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.10.2_1.1.1-dev"
+version = "1.8.9_1.1.1-dev"
 group = "simpleircbridge"
 archivesBaseName = "SimpleIRCBridge"
 
@@ -20,9 +20,9 @@ compileJava {
 }
 
 minecraft {
-    version = "1.10.2-12.18.3.2511"
+    version = "1.8.9-11.15.1.2318-1.8.9"
     runDir = "run"
-    mappings = "snapshot_20161111"
+    mappings = "stable_20"
 }
 
 processResources {
