--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,23 @@
 buildscript {
     repositories {
-        jcenter()
-        maven { url = "http://files.minecraftforge.net/maven" }
+        mavenCentral()
+        maven {
+            name = "forge"
+            url = "http://files.minecraftforge.net/maven"
+        }
+        maven {
+            name = "sonatype"
+            url = "https://oss.sonatype.org/content/repositories/snapshots/"
+        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
     }
 }
 
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'forge'
 
-version = "1.8.9_1.1.1-dev"
+version = "1.7.10_1.1.1-dev"
 group = "simpleircbridge"
 archivesBaseName = "SimpleIRCBridge"
 
@@ -20,9 +27,8 @@ compileJava {
 }
 
 minecraft {
-    version = "1.8.9-11.15.1.2318-1.8.9"
+    version = "1.7.10-10.13.4.1614-1.7.10"
     runDir = "run"
-    mappings = "stable_20"
 }
 
 processResources {
