--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.8.9_1.1.1-dev"
+version = "1.8.9_1.1.1"
 group = "simpleircbridge"
 archivesBaseName = "SimpleIRCBridge"
 
