--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.7.10_1.1.1-dev"
+version = "1.7.10_1.1.1"
 group = "simpleircbridge"
 archivesBaseName = "SimpleIRCBridge"
 
