--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = "1.16.4_1.2.0-dev"
+version = "1.16.4_1.2.1"
 group = "simpleircbridge"
 archivesBaseName = "SimpleIRCBridge"
 
